<resources>
    <string name="app_name">planToBeFit</string>
    <string name="str_start">Rozpocznij Trening</string>
    <string name="str_history">Historia Treningów</string>
    <string name="str_catalog">Wybór Ćwiczeń</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="str_cr">"copyright © 2022 Oliwier Pszeniczko. wszelkie prawa zastrzerzone."</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>